--- a/transformers/index.html
+++ b/transformers/index.html
@@ -1,1 +1,16 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%2210 0 100 100%22><text y=%22.90em%22 font-size=%2290%22>🐼</text></svg>"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/whatisx/transformers/logo192.png"/><link rel="manifest" href="/whatisx/transformers/manifest.json"/><title>What is a GPT?</title><script defer="defer" src="/whatisx/transformers/static/js/main.99b80e87.js"></script><link href="/whatisx/transformers/static/css/main.48f402c6.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
+<!doctype html><html lang="en"><head><meta charset="utf-8" /><link rel="icon"
+            href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%2210 0 100 100%22><text y=%22.90em%22 font-size=%2290%22>🐼</text></svg>" /><meta
+            name="viewport" content="width=device-width,initial-scale=1" /><meta
+            name="theme-color" content="#000000" />
+            <meta name="google-site-verification" content="c1JfDAfUTFUQhHdQYrSeQP2pKhW-0R0Hn6mARkJX34U" />
+            <meta name="description"
+            content="What is a GPT? Transformers and Attention: A Deep Dive" /><link
+            rel="apple-touch-icon"
+            href="/whatisx/transformers/logo192.png" /><link rel="manifest"
+            href="/whatisx/transformers/manifest.json" /><title>What is a
+            GPT?</title><script defer="defer"
+            src="/whatisx/transformers/static/js/main.3659790f.js"></script><link
+            href="/whatisx/transformers/static/css/main.48f402c6.css"
+            rel="stylesheet"></head><body><noscript>You need to enable
+            JavaScript to run this app.</noscript><div
+            id="root"></div></body></html>
